// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text resizer does not render if textSize is null 1`] = `
.c0 {
  display: contents;
}

.c1 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
}

<div
  className="topbar-wrapper"
  data-testid="topbar"
  style={
    Object {
      "--topbar-sticky-top-desktop": "7rem",
      "--topbar-sticky-top-mobile": "6rem",
      "--topbar-z-index": 30,
      "--topbar-z-index-mobile-medium": 51,
    }
  }
>
  <div
    className="topbar-search-print-wrapper sidebar-mobile-closed"
    style={
      Object {
        "--button-min-width": "45px",
        "--content-wrapper-max-width": "128rem",
        "--neutral-color": "#fff",
        "--sidebar-transition-time": "300ms",
        "--topbar-desktop-height": "5rem",
        "--topbar-mobile-height": "5.3rem",
      }
    }
  >
    <div
      className="c0"
      id="mobile-menu-button"
    >
      <button
        aria-label="Open menu"
        className="toolbar-plain-button topbar-menu-button"
        onClick={[Function]}
        style={
          Object {
            "--button-min-width": "45px",
            "--toolbar-icon-color": "#5e6062",
            "--toolbar-icon-darker-color": "#424242",
          }
        }
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c1"
          viewBox="0 0 448 512"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form
      className="topbar-search-input-wrapper "
      data-experiment={true}
      data-testid="desktop-search"
      onSubmit={[Function]}
      style={
        Object {
          "--button-min-width": "45px",
          "--light-blue-color": "#0dc0dc",
          "--search-button-bg-color": "transparent",
          "--search-icon-color": "#5e6062",
          "--toolbar-icon-color": "#5e6062",
        }
      }
    >
      <input
        aria-label="Search this book"
        className="topbar-search-input desktop"
        data-testid="desktop-search-input"
        onChange={[Function]}
        placeholder="Search this book"
        style={
          Object {
            "--text-label-color": "#6f6f6f",
            "--toolbar-search-input-height": "3.2rem",
          }
        }
        type="search"
        value=""
      />
      <button
        aria-label="Search this book"
        className="toolbar-plain-button topbar-search-button mobile"
        data-analytics-label="Search this book"
        data-experiment={true}
        data-testid="mobile-toggle"
        onClick={[Function]}
        style={
          Object {
            "--button-min-width": "45px",
            "--search-button-bg-color": "transparent",
            "--search-button-transition": "none",
            "--search-icon-color": "#5e6062",
            "--toolbar-icon-color": "#5e6062",
            "--toolbar-icon-darker-color": "#424242",
          }
        }
        type="button"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        aria-label="Search"
        className="toolbar-plain-button topbar-search-button desktop"
        data-experiment={true}
        style={
          Object {
            "--button-min-width": "45px",
            "--search-button-bg-color": "transparent",
            "--search-button-transition": "none",
            "--search-icon-color": "#5e6062",
            "--toolbar-icon-color": "#5e6062",
            "--toolbar-icon-darker-color": "#424242",
          }
        }
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
    </form>
  </div>
  <div
    className="topbar-mobile-search-wrapper"
    style={
      Object {
        "--neutral-color": "#fff",
        "--toolbar-mobile-search-wrapper-height": "5.3rem",
      }
    }
  >
    <hr
      className="topbar-hr"
      style={
        Object {
          "--toolbar-hr-height": "0.1rem",
        }
      }
    />
    <div
      className="topbar-mobile-search-container"
      style={
        Object {
          "--max-nav-width": "128rem",
          "--mobile-search-container-margin": "1rem",
          "--page-padding-desktop": "3.2rem",
          "--page-padding-mobile": "1.6rem",
          "--toolbar-search-input-mobile-height": "3.2rem",
        }
      }
    >
      <button
        className="toolbar-plain-button topbar-search-results-text-button topbar-close-search-results-text-button"
        data-testid="close-search-results"
        onClick={[Function]}
        style={
          Object {
            "--button-min-width": "45px",
            "--toolbar-icon-color": "#5e6062",
            "--toolbar-icon-darker-color": "#424242",
          }
        }
      >
        <div
          className="topbar-inner-text"
        >
          Close
        </div>
      </button>
      <form
        action="#"
        className="topbar-search-input-wrapper "
        data-experiment={true}
        data-testid="mobile-search"
        onSubmit={[Function]}
        style={
          Object {
            "--button-min-width": "45px",
            "--light-blue-color": "#0dc0dc",
            "--search-button-bg-color": "transparent",
            "--search-icon-color": "#5e6062",
            "--toolbar-icon-color": "#5e6062",
          }
        }
      >
        <input
          aria-label="Search this book"
          className="topbar-search-input"
          data-testid="mobile-search-input"
          onChange={[Function]}
          placeholder="Search this book"
          style={
            Object {
              "--text-label-color": "#6f6f6f",
              "--toolbar-search-input-height": "3.2rem",
            }
          }
          type="search"
          value=""
        />
        <button
          aria-label="Search"
          className="toolbar-plain-button topbar-search-button desktop"
          data-experiment={true}
          style={
            Object {
              "--button-min-width": "45px",
              "--search-button-bg-color": "transparent",
              "--search-button-transition": "none",
              "--search-icon-color": "#5e6062",
              "--toolbar-icon-color": "#5e6062",
              "--toolbar-icon-darker-color": "#424242",
            }
          }
        >
          <svg
            aria-hidden="true"
            height="18px"
            role="img"
            version="1.1"
            viewBox="0 0 18 18"
            width="18px"
          >
            <title>
              Search
            </title>
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                fillRule="nonzero"
                transform="translate(-938.000000, -206.000000)"
              >
                <path
                  d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
                />
              </g>
            </g>
          </svg>
        </button>
        
        
      </form>
    </div>
  </div>
</div>
`;

exports[`text resizer opens menu when clicking menu button 1`] = `
.c0 {
  display: contents;
}

.c2 {
  overflow: visible;
  position: relative;
}

.c4 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
}

.c4 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
  z-index: 2;
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  -webkit-clip-path: inset(0 -0.6rem 0px -0.6rem);
  clip-path: inset(0 -0.6rem 0px -0.6rem);
  background-color: #fff;
  border-left: 0.1rem solid #d5d5d5;
  border-right: 0.1rem solid #d5d5d5;
}

.c3 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
}

@media screen and (max-width:75em) {
  .c4 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c3 > div {
    padding: 1rem 1.6rem;
  }
}

<div
  className="topbar-wrapper"
  data-testid="topbar"
  style={
    Object {
      "--topbar-sticky-top-desktop": "7rem",
      "--topbar-sticky-top-mobile": "6rem",
      "--topbar-z-index": 30,
      "--topbar-z-index-mobile-medium": 51,
    }
  }
>
  <div
    className="topbar-search-print-wrapper sidebar-mobile-closed"
    style={
      Object {
        "--button-min-width": "45px",
        "--content-wrapper-max-width": "128rem",
        "--neutral-color": "#fff",
        "--sidebar-transition-time": "300ms",
        "--topbar-desktop-height": "5rem",
        "--topbar-mobile-height": "5.3rem",
      }
    }
  >
    <div
      className="c0"
      id="mobile-menu-button"
    >
      <button
        aria-label="Open menu"
        className="toolbar-plain-button topbar-menu-button"
        onClick={[Function]}
        style={
          Object {
            "--button-min-width": "45px",
            "--toolbar-icon-color": "#5e6062",
            "--toolbar-icon-darker-color": "#424242",
          }
        }
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c1"
          viewBox="0 0 448 512"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form
      className="topbar-search-input-wrapper "
      data-experiment={true}
      data-testid="desktop-search"
      onSubmit={[Function]}
      style={
        Object {
          "--button-min-width": "45px",
          "--light-blue-color": "#0dc0dc",
          "--search-button-bg-color": "transparent",
          "--search-icon-color": "#5e6062",
          "--toolbar-icon-color": "#5e6062",
        }
      }
    >
      <input
        aria-label="Search this book"
        className="topbar-search-input desktop"
        data-testid="desktop-search-input"
        onChange={[Function]}
        placeholder="Search this book"
        style={
          Object {
            "--text-label-color": "#6f6f6f",
            "--toolbar-search-input-height": "3.2rem",
          }
        }
        type="search"
        value=""
      />
      <button
        aria-label="Search this book"
        className="toolbar-plain-button topbar-search-button mobile"
        data-analytics-label="Search this book"
        data-experiment={true}
        data-testid="mobile-toggle"
        onClick={[Function]}
        style={
          Object {
            "--button-min-width": "45px",
            "--search-button-bg-color": "transparent",
            "--search-button-transition": "none",
            "--search-icon-color": "#5e6062",
            "--toolbar-icon-color": "#5e6062",
            "--toolbar-icon-darker-color": "#424242",
          }
        }
        type="button"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        aria-label="Search"
        className="toolbar-plain-button topbar-search-button desktop"
        data-experiment={true}
        style={
          Object {
            "--button-min-width": "45px",
            "--search-button-bg-color": "transparent",
            "--search-button-transition": "none",
            "--search-icon-color": "#5e6062",
            "--toolbar-icon-color": "#5e6062",
            "--toolbar-icon-darker-color": "#424242",
          }
        }
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
    </form>
    <div
      className="c2 topbar-text-resizer-dropdown mobile-variant mobile-toolbar-closed"
    >
      <button
        aria-controls="text-resizer-menu"
        aria-expanded={true}
        aria-label="Change text size"
        className="plain-button c3 dropdown-toggle "
        data-analytics-label="Change text size"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          <img
            alt=""
            aria-hidden="true"
            src="text-size.svg"
          />
        </div>
      </button>
      <div
        className="dropdown-menu text-resizer-menu"
      >
        <div
          className="topbar-text-resizer-menu"
          id="text-resizer-menu"
          style={
            Object {
              "--primary-gray-color": "#5e6062",
              "--primary-gray-medium-color": "#888888",
              "--text-resizer-gradient": "linear-gradient(
        to right,
        #002468
          calc((0 - -2) * 100 / (3 - -2) * 1%),
          #888888
          calc((0 - -2) * 100 / (3 - -2) * 1%)
      )",
            }
          }
        >
          <label
            id="text-resizer-label"
          >
            Text size
          </label>
          <div
            aria-labelledby="text-resizer-label"
            className="controls"
            role="group"
          >
            <button
              aria-label="Decrease text size"
              className="toolbar-plain-button topbar-text-resizer-change-button"
              data-testid="decrease-text-size"
              onClick={[Function]}
              style={
                Object {
                  "--button-min-width": "45px",
                  "--toolbar-icon-color": "#5e6062",
                  "--toolbar-icon-darker-color": "#424242",
                }
              }
            >
              <img
                alt=""
                aria-hidden="true"
                src="text-size-decrease.svg"
              />
            </button>
            <input
              aria-labelledby="text-resizer-label"
              data-testid="change-text-size"
              max={3}
              min={-2}
              onChange={[Function]}
              step="1"
              type="range"
              value={0}
            />
            <button
              aria-label="Increase text size"
              className="toolbar-plain-button topbar-text-resizer-change-button"
              data-testid="increase-text-size"
              onClick={[Function]}
              style={
                Object {
                  "--button-min-width": "45px",
                  "--toolbar-icon-color": "#5e6062",
                  "--toolbar-icon-darker-color": "#424242",
                }
              }
            >
              <img
                alt=""
                aria-hidden="true"
                src="text-size-increase.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="topbar-mobile-search-wrapper"
    style={
      Object {
        "--neutral-color": "#fff",
        "--toolbar-mobile-search-wrapper-height": "5.3rem",
      }
    }
  >
    <hr
      className="topbar-hr"
      style={
        Object {
          "--toolbar-hr-height": "0.1rem",
        }
      }
    />
    <div
      className="topbar-mobile-search-container"
      style={
        Object {
          "--max-nav-width": "128rem",
          "--mobile-search-container-margin": "1rem",
          "--page-padding-desktop": "3.2rem",
          "--page-padding-mobile": "1.6rem",
          "--toolbar-search-input-mobile-height": "3.2rem",
        }
      }
    >
      <button
        className="toolbar-plain-button topbar-search-results-text-button topbar-close-search-results-text-button"
        data-testid="close-search-results"
        onClick={[Function]}
        style={
          Object {
            "--button-min-width": "45px",
            "--toolbar-icon-color": "#5e6062",
            "--toolbar-icon-darker-color": "#424242",
          }
        }
      >
        <div
          className="topbar-inner-text"
        >
          Close
        </div>
      </button>
      <form
        action="#"
        className="topbar-search-input-wrapper "
        data-experiment={true}
        data-testid="mobile-search"
        onSubmit={[Function]}
        style={
          Object {
            "--button-min-width": "45px",
            "--light-blue-color": "#0dc0dc",
            "--search-button-bg-color": "transparent",
            "--search-icon-color": "#5e6062",
            "--toolbar-icon-color": "#5e6062",
          }
        }
      >
        <input
          aria-label="Search this book"
          className="topbar-search-input"
          data-testid="mobile-search-input"
          onChange={[Function]}
          placeholder="Search this book"
          style={
            Object {
              "--text-label-color": "#6f6f6f",
              "--toolbar-search-input-height": "3.2rem",
            }
          }
          type="search"
          value=""
        />
        <button
          aria-label="Search"
          className="toolbar-plain-button topbar-search-button desktop"
          data-experiment={true}
          style={
            Object {
              "--button-min-width": "45px",
              "--search-button-bg-color": "transparent",
              "--search-button-transition": "none",
              "--search-icon-color": "#5e6062",
              "--toolbar-icon-color": "#5e6062",
              "--toolbar-icon-darker-color": "#424242",
            }
          }
        >
          <svg
            aria-hidden="true"
            height="18px"
            role="img"
            version="1.1"
            viewBox="0 0 18 18"
            width="18px"
          >
            <title>
              Search
            </title>
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                fillRule="nonzero"
                transform="translate(-938.000000, -206.000000)"
              >
                <path
                  d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
                />
              </g>
            </g>
          </svg>
        </button>
        
        
      </form>
      <div
        className="c2 topbar-text-resizer-dropdown mobile-variant mobile-toolbar-closed"
      >
        <button
          aria-controls="text-resizer-menu"
          aria-expanded={false}
          aria-label="Change text size"
          className="plain-button c4 dropdown-toggle "
          data-analytics-label="Change text size"
          onClick={[Function]}
        >
          <div
            tabIndex={-1}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size.svg"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
